--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
 	}
 }
     readTextFile("test.txt");
+	  setInterval(function() {
+	  	readTextFile("test.txt");
+	  },5000);
   </script>
 </body>
