--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
+<head>
+<title>MyTestWebsite</title>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+</head>
 <body style="background-color: #777777;">
   <h1>TEST SITE</h1>
   <p id="test">There is nothing here for some reason...</p>
